@@ -1,5 +1,7 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: rpmwget: wire up --quota.
+    - jbj: rpmsw: change bytes accumulator to unsigned long long.
     - jbj: rpmwget: wire up --limit-rate. more to do ...
     - jbj: rpmwget: wire up --progress; only "bar|none" args implemented.
     - jbj: rpmwget: add rate/eta calculation to progress bar and logging.
